--- a/test.ipynb
+++ b/test.ipynb
@@ -73,8 +73,15 @@
     "# !pip install -r requirements.txt\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
+    "# WAN 2.2\n",
+    "! [ -f \"/root/char/ComfyUI/models/text_encoders/umt5_xxl_fp8_e4m3fn_scaled.safetensors\" ] ||hf download Comfy-Org/Wan_2.1_ComfyUI_repackaged split_files/text_encoders/umt5_xxl_fp8_e4m3fn_scaled.safetensors --local-dir /root/char/ComfyUI/models/text_encoders\n",
+    "!mv /root/char/ComfyUI/models/text_encoders/split_files/text_encoders/umt5_xxl_fp8_e4m3fn_scaled.safetensors /root/char/ComfyUI/models/text_encoders/umt5_xxl_fp8_e4m3fn_scaled.safetensors\n",
+    "! [ -f \"/root/char/ComfyUI/models/vae/wan_2.1_vae.safetensors\" ] || hf download Comfy-Org/Wan_2.2_ComfyUI_Repackaged split_files/vae/wan_2.1_vae.safetensors --local-dir /root/char/ComfyUI/models/vae\n",
+    "!mv /root/char/ComfyUI/models/vae/split_files/vae/wan_2.1_vae.safetensors /root/char/ComfyUI/models/vae/wan_2.1_vae.safetensors\n",
+    "! [ -f \"/root/char/ComfyUI/models/diffusion_models/wan2.2_i2v_high_noise_14B_fp8_scaled.safetensors\" ] || hf download Comfy-Org/Wan_2.2_ComfyUI_Repackaged split_files/diffusion_models/wan2.2_i2v_high_noise_14B_fp8_scaled.safetensors --local-dir /root/char/ComfyUI/models/diffusion_models\n",
+    "!mv /root/char/ComfyUI/models/diffusion_models/split_files/diffusion_models/wan2.2_i2v_high_noise_14B_fp8_scaled.safetensors /root/char/ComfyUI/models/diffusion_models/wan2.2_i2v_high_noise_14B_fp8_scaled.safetensors\n",
+    "! [ -f \"/root/char/ComfyUI/models/diffusion_models/wan2.2_i2v_low_noise_14B_fp8_scaled.safetensors\" ] || hf download Comfy-Org/Wan_2.2_ComfyUI_Repackaged split_files/diffusion_models/wan2.2_i2v_low_noise_14B_fp8_scaled.safetensors --local-dir /root/char/ComfyUI/models/diffusion_models\n",
+    "!mv /root/char/ComfyUI/models/diffusion_models/split_files/diffusion_models/wan2.2_i2v_low_noise_14B_fp8_scaled.safetensors /root/char/ComfyUI/models/diffusion_models/wan2.2_i2v_low_noise_14B_fp8_scaled.safetensors\n",
     "\n",
     "\n",
     "# %cd /root/char/ComfyUI/models/vae\n",
@@ -89,7 +96,7 @@
     "# ! [ -f \"flux1-dev-kontext_fp8_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-kontext-dev_ComfyUI/resolve/main/split_files/diffusion_models/flux1-dev-kontext_fp8_scaled.safetensors\"\n",
     "# ! [ -f \"flux1-kontext-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/resolve/main/flux1-kontext-dev.safetensors\"\n",
     "# ! [ -f \"flux1-fill-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Fill-dev/blob/main/flux1-fill-dev.safetensors\"\n",
-    "!hf download lodestones/Chroma chroma-unlocked-v48-detail-calibrated.safetensors --local-dir /root/char/ComfyUI/models/diffusion_models\n",
+    "# !hf download lodestones/Chroma chroma-unlocked-v48-detail-calibrated.safetensors --local-dir /root/char/ComfyUI/models/diffusion_models\n",
     "\n",
     "%cd /root/char/ComfyUI/models/checkpoints\n",
     "! [ -f \"flux1-dev-fp8.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors\"\n",
